fix tug_link z-index bug

--- a/public/tuku/list.css
+++ b/public/tuku/list.css
@@ -72,6 +72,7 @@ body {
   text-align: center;
   text-decoration: none;
   color: #258fb8;
+  z-index: 1;
 }
 
 #image_list {
